--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,6 +366,32 @@ header .menu ul li ul li ul {
     left: 100%;
     top: 0;
 }
+.section-title .title-line {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.section-title .title-line:before,
+.section-title .title-line:after {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #ccc;
+    margin: 0 15px;
+}
+
+.section-title .title-line span {
+    font-size: 2em;
+    font-weight: bold;
+    color: #333;
+    padding: 0 10px;
+    background: #fff; /* Optional: For a background color behind the text */
+}
+
 
 /* --------------------------
    3. Home and Portfolio
